# fibonacci-rs

./: Cargo.toml  README.md  check.sh
benches/: benches.rs
src/: lib.rs
