[package]
name = "fibs"
authors = ["Daniel Cormier"]
version = "0.2.2"
edition = "2021"
description = "Get a Fibonacci number or sequence"
documentation = "https://docs.rs/fibs/"
repository = "https://github.com/dcormier/fibonacci-rs"
license= "Apache-2.0"
categories = [
    "no-std",
    "mathematics",
]
exclude = [
    ".gitignore",
    "Cargo.lock",
    "check.sh",
    "benches",
]

[dependencies]
num = { version = "0", default-features = false }

[dev-dependencies]
paste = "1"

[features]
default = ["std"]
std = ["num/std"]
bench = ["std"]

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true
